# sqlite_mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 835944c91780_initial_schema.py
data/: seed.sql
docker/: Dockerfile
scripts/: seed.py
src/habit_tracker_mcp/: config.py  database.py  models.py  orm.py  security.py  server.py
src/habit_tracker_mcp/models/: inputs.py
src/habit_tracker_mcp/tools/: __init__.py  add_habit.py  add_todo.py  archive_habit.py  complete_habit.py  complete_todo.py  run_query.py
src/sqlite_mcp/: config.py  database.py  server.py
tests/: conftest.py  test_database.py
tests/fixtures/: seed.sql
