[project]
name = "habit-tracker-mcp"
version = "0.1.0"
description = "An MCP server for tracking habits and todos."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "mcp>=1.26.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
dev = [
    {include-group = "test"},
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/habit_tracker_mcp"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]  # errors, pyflakes, isort

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
